update 1.3.2 small fix to navbar on mobile screens

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -65,6 +65,7 @@
 .small-nav-btn {
     display: none;
     position: absolute;
+    width: 80px;
     right: 0;
     font-size: 2.5rem;
     margin: 20px;
